# IncidentReview

./: .env.example  .eslintrc.cjs  .gitignore  .lighthouserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  HINSITE.md  IMPLEMENTATION_STATUS.md  PLANS.md  README.md  RELEASE_NOTES.md  TESTING.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  stryker.conf.json  tsconfig.json  tsconfig.node.json  typedoc.json  vite.config.ts  vitest.config.ts
crates/qir_ai/: Cargo.toml
crates/qir_ai/src/: evidence.rs  guardrails.rs  lib.rs  ollama.rs
crates/qir_ai/src/draft/: mod.rs  prompts.rs
crates/qir_ai/src/embeddings/: mod.rs  ollama_embed.rs
crates/qir_ai/src/evidence/: chunking.rs  index.rs  mod.rs  model.rs  store.rs
crates/qir_ai/src/llm/: mod.rs  ollama_llm.rs
crates/qir_ai/src/retrieve/: mod.rs  similarity.rs
crates/qir_ai/tests/: boundaries.rs  draft.rs  evidence_context.rs  index_build.rs  retrieval.rs  stress_large_embeddings.rs
crates/qir_core/: Cargo.toml
crates/qir_core/src/: error.rs  lib.rs
crates/qir_core/src/ai_drafts/: mod.rs
crates/qir_core/src/analytics/: mod.rs
crates/qir_core/tests/: ai_drafts.rs  analytics_v2.rs  backup_restore.rs  demo_seed.rs  edge_cases_malformed.rs  edge_cases_unicode.rs  ingest_jira_csv.rs  ingest_slack_transcript.rs  jira_profiles_and_import.rs  report_golden.rs  sanitized_export.rs  sanitized_import_errors.rs  sanitized_round_trip.rs  stress_large_dataset.rs  validate_and_metrics.rs  workspaces.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+207 files in other folders)
