[package]
name = "incidentreview"
version = "0.1.0"
description = "IncidentReview desktop app"
authors = ["IncidentReview"]
edition = "2021"

[lib]
name = "incidentreview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
qir_core = { path = "../crates/qir_core" }
qir_ai = { path = "../crates/qir_ai" }

rusqlite = { version = "0.32.1", features = ["bundled"] }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
