[package]
name = "qir_core"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
hex = "0.4.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
time = { version = "0.3.47", features = ["parsing", "formatting"] }

[dev-dependencies]
pretty_assertions = "1"
